--- a/visual-lane-servoing/.vscode/settings.json
+++ b/visual-lane-servoing/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "workbench.colorTheme": "Default Light+",
+    "workbench.colorTheme": "Catppuccin Frappé",
     "python.testing.unittestArgs": [
         "-v",
         "-s",
